--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
     "vue-the-mask": "^0.11.1",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2",
-    "vuex-persistedstate": "^2.7.0"
-  },
-  "devDependencies": {
+    "vuex-persistedstate": "^2.7.0",
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@storybook/addon-actions": "^5.3.3",
